result scene megcsinálva, JacksonHelper valamint további a result működését elősegítő osztályok hozzáadva

--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,28 @@
         <jacoco.version>0.8.12</jacoco.version>
         <maven.checkstyle.version>3.3.1</maven.checkstyle.version>
         <maven.surefire.version>3.2.5</maven.surefire.version>
+        <jackson.version>2.15.0</jackson.version>
         <exec.mainClass>boardgame.Main</exec.mainClass>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>hu.unideb.inf</groupId>
             <artifactId>homework-project-utils</artifactId>
