refactor: gui osztályok áthelyezve a gui packagebe

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <maven.checkstyle.version>3.3.1</maven.checkstyle.version>
         <maven.surefire.version>3.2.5</maven.surefire.version>
         <jackson.version>2.15.0</jackson.version>
-        <exec.mainClass>boardgame.Main</exec.mainClass>
+        <exec.mainClass>boardgame.gui.Main</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
